add init styling

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,14 +1,21 @@
 <header>
     <nav>
         <ul>
+            <!-- Maybe create logo and move home link to it -->
             <li><%= link_to "Home", root_path %></li>
+            <li><%= link_to "About me" %></li>
+            <li><%= link_to "Skills" %></li>
+            <li><%= link_to "Projects" %></li>
+            <li><%= link_to "CONTACT ME" %></li>
             <!-- Add other links here -->
         </ul>
     </nav>
 </header>
 <main>
-
+    <h1>Hi, I am Daniel, Full Stack Developer</h1>
+    <p>This is me and this is what I do...</p>
 </main>
 <footer>
-
+    <p>Daniel Olsson, 2025</p>
+    <!-- Add either skills icons or socials icons with links -->
 </footer>
