--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,12 +22,50 @@
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag :application, "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag :pages, "data-turbo-track": "reload" %>
+
     <%= javascript_importmap_tags %>
 </head>
 
 <body>
+    <header>
+    <nav>
+        <div class="nav-container">
+            <div class="logo">
+                <a href="#"><span>D.</span> Olsson</a>
+            </div>
+            <ul class="nav-links">
+                <li><%= link_to "Home", root_path %></li>
+                <li><%= link_to "About Me", about_path %></li>
+                <li><%= link_to "Skills", skills_path %></li>
+                <li><%= link_to "Projects", portfolio_path %></li>
+            </ul>
+            <div class="contact-btn">
+                <%= link_to "Contact Me", contact_path %>
+            </div>
+            <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+        </div>
+    </nav>
+    <ul class="mobile-menu">
+        <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "About Me" %></li>
+        <li><%= link_to "Skills" %></li>
+        <li><%= link_to "Projects" %></li>
+        <li class="contact-btn"><%= link_to "Contact Me" %></li>
+    </ul>
+    </header>
     <%= yield %>
+    <footer>
+    <p>Daniel Olsson, 2025</p>
+    <!-- Add either skills icons or socials icons with links -->
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+function toggleMenu() {
+    const mobileMenu = document.querySelector(".mobile-menu");
+    mobileMenu.style.display = mobileMenu.style.display === "flex" ? "none" : "flex";
+}
+</script>
 </body>
 
 </html>
